--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "webpack-react-tailwindcss",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development --config dev.config.js",
     "build": "webpack --mode production"
   },
   "author": "MrDark",
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.7",
     "postcss": "^8.4.33",
@@ -33,8 +34,14 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "universal-cookie": "^7.0.2",
+    "yup": "^1.3.3"
   }
 }
